ansible/roles/helm-apply/files/saas/saas-clickhouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-clickhouse
  namespace: saas
  labels:
    app: saas
    component: saas-clickhouse
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: saas
      component: saas-clickhouse
  template:
    metadata:
      labels:
        app: saas
        component: saas-clickhouse
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 40
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  component: saas-clickhouse
              topologyKey: kubernetes.io/hostname
      containers:
        - name: saas-clickhouse
          image: core.harbor.domain/soc/saas:develop-690e72471
          volumeMounts:
            - name: saas-clickhouse-config-volume
              mountPath: /opt/saas/conf/conf.d
          resources:
            requests:
              memory: 1Gi
              cpu: '1000m'
            limits:
              memory: 16Gi
              cpu: '8000m'
          startupProbe:
            httpGet:
              path: /status
              port: 19999
            failureThreshold: 20
            timeoutSeconds: 10
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: 19999
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /status
              port: 19999
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 10
      volumes:
        - name: saas-clickhouse-config-volume
          configMap:
            name: saas-config
