ansible/roles/helm-apply/files/saas/saas-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-web
  namespace: saas
  labels:
    app: saas
    component: saas-web
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: saas
      component: saas-web
  template:
    metadata:
      labels:
        app: saas
        component: saas-web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                component: saas-web
            namespaces:
            - saas
            topologyKey: kubernetes.io/hostname
      nodeSelector:
        saas/soc-role: master
      serviceAccountName: saas-user
      containers:
        - name: saas-web
          image: saas:develop
          args: ["web"]
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 500Mi
              cpu: '500m'
            limits:
              memory: 8Gi
              cpu: '8'
          startupProbe:
            httpGet:
              path: /monitor/health
              port: 8080
            failureThreshold: 60
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /monitor/health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 4
          readinessProbe:
            httpGet:
              path: /monitor/health
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 2
            failureThreshold: 2
          volumeMounts:
            - name: saas-web-config-volume
              mountPath: /opt/saas/conf/conf.d
            - name: data-dir
              mountPath: /opt/data
            - name: upload-dir
              mountPath: /opt/uploadPackage
            - name: ssh-path
              mountPath: /root/.ssh
      volumes:
        - name: saas-web-config-volume
          configMap:
            name: saas-config
        - name: data-dir
          hostPath:
            path: AiLogAuditorPath
        - name: upload-dir
          hostPath:
            path: /data/soc/uploadPackage
        - name: ssh-path
          hostPath:
            path: /root/.ssh
