ansible/roles/helm-apply/files/saas/saas-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-web
  namespace: saas
  labels:
    app: saas
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: saas
    component: saas-web
