ansible/roles/helm-apply/files/saas/saas-web-ui-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutesaaswebui
  namespace: saas
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: saas-web-ui
          namespace: saas
          port: 80
